# sha3-wgpu

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  AGENT_FIX_PROMPT.md  APACHE-LICENSE  AUDIT_REPORT.md  Cargo.toml  GPU_HASH_MISMATCH_DEBUG.md  GPU_OPTIMIZATION_GUIDE.md  MIT-LICENSE  README.md  debug_test.rs  package.json  simple_test.rs  test.rs  tsconfig.json  wasm-pack.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.trunk/: trunk.yaml
crates/sha3-bench/: Cargo.toml
crates/sha3-bench/benches/: sha3_comparison.rs
crates/sha3-bench/src/: main.rs
crates/sha3-core/: Cargo.toml
crates/sha3-core/src/: error.rs  lib.rs  types.rs
crates/sha3-wasm/: Cargo.toml  LICENSE-APACHE
crates/sha3-wasm/src/: lib.rs
crates/sha3-wasm/tests/: web.rs
crates/sha3-wgpu/: Cargo.toml  build.rs
crates/sha3-wgpu/src/: compute.rs  context.rs  error.rs  lib.rs
crates/sha3-wgpu/src/wgsl/: sha3.wgsl
examples/: basic.rs
examples/browser/: .gitignore  README.md  index.html  package.json  vite.config.ts
examples/browser/src/: App.css  App.tsx  index.css
examples/browser/src/components/: AllVariantsDemo.tsx  BasicDemo.tsx  MerkleTreeDemo.tsx  PerformanceDemo.tsx
examples/browser/src/hooks/: useHasher.ts
examples/node/: README.md  all-variants.mjs  basic.mjs  batch-performance.mjs
