[workspace]
members = [
    "crates/sha3-core",
    "crates/sha3-wgpu",
    "crates/sha3-wasm",
    "crates/sha3-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sha3-wgpu"

[workspace.dependencies]
# Core dependencies
bytemuck = "1.14"
thiserror = "1.0"

# WebGPU
wgpu = "0.20"
pollster = "0.3"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Async runtime for WASM (optional - requires atomics support)
# wasm-bindgen-rayon = "1.0"  # Uncomment if you need parallel processing in WASM

# Benchmarking
criterion = "0.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CPU reference implementation for testing
sha3 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

