[package]
name = "sha3-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sha3_bench"
path = "src/main.rs"

[[bench]]
name = "sha3_comparison"
harness = false

[dependencies]
sha3-core = { path = "../sha3-core" }
sha3-wgpu = { path = "../sha3-wgpu" }
sha3.workspace = true
criterion.workspace = true
tokio.workspace = true
pollster.workspace = true
