[package]
name = "sha3-wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
sha3-core = { path = "../sha3-core" }
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
futures = "0.3"
sha3.workspace = true

[dev-dependencies]
hex.workspace = true
tokio.workspace = true
